graph from json

--- a/src/views/json.html
+++ b/src/views/json.html
@@ -16,6 +16,7 @@
           .nodeId('id')
           .nodeVal('val')
           .nodeLabel('id')
+          // .linkAutoColorBy('color')
           .nodeAutoColorBy('group')
           .linkSource('source')
           .linkTarget('target')
