start mocha and chai

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,11 +6,15 @@
   
   <body>
     <form action="/featmap" method="get">
+      <p>Paste link to artist or their spotify URI</p>
+      https://open.spotify.com/artist/0Wi2fADbhwXlPUWxBmzo99?si=85a1719cac0c4afd <br>
+      spotify:artist:0Wi2fADbhwXlPUWxBmzo99
       <p>
-        <input type="text" name="mgng">
+        <input type="text" name="artist" placeholder="cmon">
       </p>
       <p>
-        <input type="submit">
+        <input type="submit" value="( ノ ^o^)ノ">
       </p>
     </form>
   </body>
+  
