--- a/src/views/index.html
+++ b/src/views/index.html
@@ -16,5 +16,9 @@
         <input type="submit" value="( ノ ^o^)ノ">
       </p>
     </form>
+
+    <form action="/tmp">
+      <input type="submit" value="̿'̿'\̵͇̿̿\з=( ͠° ͟ʖ ͡°)=ε/̵͇̿̿/'̿̿ ̿ ̿ ̿ ̿ ̿">
+    </form>
   </body>
   
