--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,20 +5,15 @@
   </head>
   
   <body>
-    <form action="/featmap" method="get">
-      <p>Paste link to artist or their spotify URI</p>
-      https://open.spotify.com/artist/0Wi2fADbhwXlPUWxBmzo99?si=85a1719cac0c4afd <br>
-      spotify:artist:0Wi2fADbhwXlPUWxBmzo99
-      <p>
-        <input type="text" name="artist" placeholder="cmon">
-      </p>
-      <p>
-        <input type="submit" value="( ノ ^o^)ノ">
-      </p>
-    </form>
+    <div id="form" style="position: absolute;">
+      Paste link to artist or their spotify URI
+      <input type="text" name="artist" value="spotify:artist:0Wi2fADbhwXlPUWxBmzo99">
+      depth<input type="number" name="depth" value="1">
+      <input id="submit" type="button" value="( ノ ^o^)ノ">
+    </div>
 
-    <form action="/tmp">
-      <input type="submit" value="̿'̿'\̵͇̿̿\з=( ͠° ͟ʖ ͡°)=ε/̵͇̿̿/'̿̿ ̿ ̿ ̿ ̿ ̿">
-    </form>
+    <div id="graph"></div>
+  
+    <script src="requestGraph.js"></script>
   </body>
   
