--- a/src/views/index.html
+++ b/src/views/index.html
@@ -5,15 +5,15 @@
   </head>
   
   <body>
-    <div id="form" style="position: absolute;">
+    <form name="form" style="position: absolute; z-index: 100;">
       Paste link to artist or their spotify URI
       <input type="text" name="artist" value="spotify:artist:0Wi2fADbhwXlPUWxBmzo99">
       depth<input type="number" name="depth" value="1">
       <input id="submit" type="button" value="( ノ ^o^)ノ">
-    </div>
-
+    </form>
+    
     <div id="graph"></div>
-  
+    
     <script src="requestGraph.js"></script>
   </body>
   
